# THUAI8

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_UART_MODIFICATION.md  SECURITY.md  log.txt  log.txt-copy0.txt  log.txt-copy1.txt  log.txt-copy10.txt  log.txt-copy11.txt  log.txt-copy12.txt  log.txt-copy13.txt  log.txt-copy14.txt  log.txt-copy15.txt  log.txt-copy16.txt  log.txt-copy17.txt  log.txt-copy18.txt  log.txt-copy19.txt  log.txt-copy2.txt  log.txt-copy20.txt  log.txt-copy21.txt  log.txt-copy3.txt  log.txt-copy4.txt  log.txt-copy5.txt  log.txt-copy6.txt  log.txt-copy7.txt  log.txt-copy8.txt  log.txt-copy9.txt  renovate.json  run_API.cmd  run_CPP_clients.cmd  run_all.cmd  run_client_test.cmd  run_debug_interface.cmd  run_python_clients.cmd  run_server.cmd  sparse_matrix_mul.asm  test_endianness.asm  (+1 more)
CAPI/cpp/: .gitignore  API.sln  CMakeLists.txt  README.md  test.cpp
CAPI/cpp/API/: API.vcxproj  API.vcxproj.filters
CAPI/cpp/API/include/: AI.h  API.h  Communication.h  constants.h  logic.h  state.h  structures.h  utils.hpp
CAPI/cpp/API/src/: AI.cpp  API.cpp  Communication.cpp  DebugAPI.cpp  logic.cpp  main.cpp
CAPI/cpp/fmt/: base.h
CAPI/cpp/grpc/include/: ares.h
CAPI/cpp/grpc/include/openssl/: configuration.h  opensslv.h  ssl.h
CAPI/cpp/proto/: Message2Clients.pb.cc  Message2Clients.pb.h  Message2Clients.proto  Message2Server.pb.cc  Message2Server.pb.h  MessageType.pb.cc  MessageType.pb.h  MessageType.proto  Services.grpc.pb.cc  Services.grpc.pb.h  Services.pb.cc  Services.pb.h  Services.proto
CAPI/cpp/tclap/: COPYING.txt
(+592 files in other folders)
